SUBDIRS =					\
	a11y					\
	gtkhtml					\
	components				\
	art					\
	po

CLEANFILES =					\
	po/.intltool-merge-cache

DISTCLEANFILES =				\
	$(builddir)/doltcompile			\
	$(builddir)/doltlibtool

MAINTAINERCLEANFILES =				\
	$(srcdir)/INSTALL			\
	$(srcdir)/aclocal.m4			\
	$(srcdir)/autoscan.log			\
	$(srcdir)/config.guess			\
	$(srcdir)/config.h.in			\
	$(srcdir)/config.sub			\
	$(srcdir)/configure.scan		\
	$(srcdir)/depcomp			\
	$(srcdir)/install-sh			\
	$(srcdir)/ltmain.sh			\
	$(srcdir)/missing			\
	$(srcdir)/mkinstalldirs

EXTRA_DIST =					\
	gtkhtml-zip.in				\
	COPYING.LIB				\
	BUGS					\
	intltool-extract.in			\
	intltool-update.in			\
	intltool-merge.in

-include $(top_srcdir)/git.mk
