ACLOCAL_AMFLAGS=-I m4

SUBDIRS =					\
	a11y					\
	gtkhtml					\
	components				\
	art					\
	po

CLEANFILES =					\
	po/.intltool-merge-cache

MAINTAINERCLEANFILES =				\
	$(srcdir)/INSTALL			\
	$(srcdir)/aclocal.m4			\
	$(srcdir)/autoscan.log			\
	$(srcdir)/compile			\
	$(srcdir)/config.guess			\
	$(srcdir)/config.h.in			\
	$(srcdir)/config.sub			\
	$(srcdir)/configure.scan		\
	$(srcdir)/depcomp			\
	$(srcdir)/install-sh			\
	$(srcdir)/ltmain.sh			\
	$(srcdir)/missing			\
	$(srcdir)/mkinstalldirs			\
	$(srcdir)/m4/intltool.m4		\
	$(srcdir)/m4/libtool.m4			\
	$(srcdir)/m4/ltoptions.m4		\
	$(srcdir)/m4/ltsugar.m4			\
	$(srcdir)/m4/ltversion.m4		\
	$(srcdir)/m4/lt~obsolete.m4


EXTRA_DIST =					\
	gtkhtml-zip.in				\
	COPYING.LIB				\
	BUGS					\
	intltool-extract.in			\
	intltool-update.in			\
	intltool-merge.in

-include $(top_srcdir)/git.mk
