iconsdir = $(datadir)/gtkhtml/icons
icons_DATA = \
	16_cut.png			\
	24_cut.png			\
	16_copy.png			\
	24_copy.png			\
	16_paste.png			\
	24_paste.png			\
	insert-table-16.png		\
	insert-table-24.png		\
	insert-image-16.png		\
	insert-image-24.png		\
	insert-link-16.png		\
	insert-link-24.png		\
	insert-rule-16.png		\
	insert-rule-24.png		\
	search-24.png			\
	search-and-replace-24.png	\
	html-viewer.png			\
	bulb.png			\
	rule-blue-left.png		\
	rule-blue-center.png		\
	rule-blue-right.png		\
	transparent.png			\
	flowers.png			\
	rule-yellow-flowers-left.png	\
	rule-yellow-flowers-center.png	\
	rule-yellow-flowers-right.png	\
	empty_image.png

EXTRA_DIST = \
	$(icons_DATA)
